--- a/package.json
+++ b/package.json
@@ -1,32 +1,46 @@
 {
-  "name": "lobster-media",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "aws-amplify": "^1.1.28",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "aurora-framework",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "axios": "^0.19.0",
+        "babel-jest": "^24.8.0",
+        "cross-storage": "^1.0.0",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-router": "^5.0.1",
+        "react-router-dom": "^5.0.1",
+        "react-scripts": "3.0.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "jest && react-scripts build",
+        "eject": "react-scripts eject",
+        "test": "jest",
+
+        "api:init" : "bash scripts/api.init.sh",
+        "api:create" : "bash scripts/api.create.sh"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "jest": "^24.7.0",
+        "react-test-renderer": "^16.8.6",
+        "@babel/core": "*",
+        "@babel/preset-env": "*",
+        "@babel/preset-react": "*"
+    }
 }
