--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "jest && react-scripts build",
         "eject": "react-scripts eject",
         "test": "jest",
         "aws:init": "bash scripts/aws.init.sh",
