--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@babel/core": "*",
         "@babel/preset-env": "*",
         "@babel/preset-react": "*",
-        "react-test-renderer": "^16.8.6"
+        "react-test-renderer": "^16.8.6",
+        "serverless-offline": "^5.3.3"
     }
 }
