--- a/package.json
+++ b/package.json
@@ -7,22 +7,26 @@
         "axios": "^0.19.0",
         "babel-jest": "^24.8.0",
         "cross-storage": "^1.0.0",
+        "mysql": "^2.17.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
-        "react-scripts": "3.0.1"
+        "react-scripts": "3.0.1",
+        "serverless-mysql": "^1.4.0"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "jest && react-scripts build",
         "eject": "react-scripts eject",
         "test": "jest",
+        "init": "bash scripts/init.sh",
         "aws:init": "bash scripts/aws.init.sh",
         "ms:create": "bash scripts/ms.create.sh",
         "ms:deploy": "bash scripts/ms.deploy.sh",
         "ms:pack": "bash scripts/ms.pack.sh",
         "ms:remove": "bash scripts/ms.remove.sh",
+        "ms:offline": "bash scripts/ms.offline.sh",
         "web:deploy": "bash scripts/web.deploy.sh"
     },
     "eslintConfig": {
