--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "author": "Eibiz Co. Ltd",
     "dependencies": {
+        "antd": "^3.19.5",
         "axios": "^0.19.0",
         "babel-jest": "^24.8.0",
         "cross-storage": "^1.0.0",
@@ -11,7 +12,7 @@
         "react-dom": "^16.8.6",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
-        "react-scripts": "3.0.1"
+        "react-scripts": "^3.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
