--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "author": "Eibiz Co. Ltd",
     "dependencies": {
+        "antd": "^3.19.6",
         "axios": "^0.19.0",
         "babel-jest": "^24.8.0",
         "cross-storage": "^1.0.0",
