--- a/server/UserManagment/serverless.yml
+++ b/server/UserManagment/serverless.yml
@@ -36,30 +36,72 @@ provider:
   #     - 
 
 functions:
-  hello:
-    handler: handler.hello
+
+  getUsers:
+    handler: handler.getUsers
     events:
-      # Please remove this
       - http:
-          path: ${self:service}/hello
+          path: user_manager/getUsers
           method: get
           integration: lambda
-          # cors:
-          #   origin: '*' # <-- Specify allowed origin
-          #   headers: # <-- Specify allowed headers
-          #     - Access-Control-Allow-Credentials
-          #     - X-Amz-Date
-          #     - Authorization
-          #     - X-Api-Key
-          #     - X-Amz-Security-Token
-          #     - X-Amz-User-Agent
-          #     - idToken
-          #   allowCredentials: false
+    # events:
+    #   - cognitoUserPool:
+    #       pool: androidiMediaUserPool
+    #       trigger: PreSignUp
+    #       integration: lambda
+    #   - cognitoUserPool:
+    #       pool: androidiMediaUserPool
+    #       trigger: PostConfirmation
+    #       integration: lambda
+  
+  getUserId:
+    handler: user_manager.getUserId 
+    events:
+      - http:
+          path: user_manager/getUserId/{username}
+          method: get
+          integration: lambda
+          cors:
+            origin: '*' # <-- Specify allowed origin
+            headers: # <-- Specify allowed headers
+              - Access-Control-Allow-Credentials
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+              - idToken
+            allowCredentials: false
 
           # authorizer:
           #   type: COGNITO_USER_POOLS # TOKEN or COGNITO_USER_POOLS, same as AWS Cloudformation documentation
           #   authorizerId: r5j1jv
 
+  signout:
+    handler: user_manager.signout 
+    events:
+      - http:
+          path: user_manager/signout
+          method: post
+          integration: lambda
+          cors:
+            origin: '*' # <-- Specify allowed origin
+            headers: # <-- Specify allowed headers
+              - Access-Control-Allow-Credentials
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+              - idToken
+            allowCredentials: false
+
+          # authorizer:
+          #   type: COGNITO_USER_POOLS # TOKEN or COGNITO_USER_POOLS, same as AWS Cloudformation documentation
+          #   authorizerId: r5j1jv
+
+ 
 plugins:
   - serverless-offline
 
