--- a/server/webUserManagment/serverless.yml
+++ b/server/webUserManagment/serverless.yml
@@ -37,7 +37,7 @@ provider:
 
 functions:
   webUser:
-    handler: webUser.get
+    handler: handler.get
     events:
       - http:
           path: ${self:service}/get/{username}
