--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "axios": "^0.19.0",
         "babel-jest": "^24.8.0",
         "cross-storage": "^1.0.0",
+        "dos2unix": "^1.1.2",
         "mysql": "^2.17.1",
         "react": "^16.8.6",
         "react-bootstrap": "^1.0.0-beta.9",
