--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
         "react-scripts": "^3.0.1",
-        "serverless-mysql": "^1.4.0"
+        "aws-sdk": "^2.464.0"
     },
     "scripts": {
         "start": "react-scripts start",
