--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "react-scripts": "^3.0.1",
         "redux": "^4.0.1",
         "redux-persist": "^5.10.0",
-        "serverless-mysql": "^1.4.0"
+        "serverless-mysql": "^1.4.0",
         "aws-sdk": "^2.464.0"
     },
     "scripts": {
