--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "private": true,
     "author": "Eibiz Co. Ltd",
     "dependencies": {
+        "amazon-cognito-identity-js": "^3.0.13",
         "antd-local-icon": "^0.1.3",
         "auth0-lock": "^11.0.1",
         "aws": "0.0.3-2",
+        "aws-sdk": "^2.480.0",
         "axios": "^0.19.0",
         "babel-jest": "^24.8.0",
         "bootstrap": "^4.3.1",
@@ -36,8 +38,7 @@
         "react-scripts": "^3.0.1",
         "redux": "^4.0.1",
         "redux-persist": "^5.10.0",
-        "serverless-mysql": "^1.4.0",
-        "aws-sdk": "^2.464.0"
+        "serverless-mysql": "^1.4.0"
     },
     "scripts": {
         "start": "react-scripts start",
