--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "serverless-mysql": "^1.4.0"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "npm run ms:list dev && react-scripts start",
         "build": "jest && react-scripts build",
         "eject": "react-scripts eject",
         "test": "jest",
@@ -52,6 +52,7 @@
         "ms:pack": "bash scripts/ms.pack.sh",
         "ms:remove": "bash scripts/ms.remove.sh",
         "ms:offline": "bash scripts/ms.offline.sh",
+        "ms:list": "bash scripts/ms.list.sh",
         "web:deploy": "bash scripts/web.deploy.sh"
     },
     "eslintConfig": {
