--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # package directories
 node_modules
 jspm_packages
+build
+coverage
 
 # Serverless directories
 .serverless
-
 coverage/*
-
 logs/*
+build/*
+server/*
+src/*
