--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-    "name": "aurora-framework",
+    "name": "pomelo-test",
     "version": "0.1.0",
     "private": true,
-    "author": "Eibiz Co. Ltd",
+    "author": "Rodrigo Medina",
     "dependencies": {
+        "axios": "^0.19.0",
         "babel-jest": "^24.8.0",
+        "bootstrap": "^4.3.1",
         "cross-storage": "^1.0.0",
+        "moment": "^2.24.0",
         "react": "^16.8.6",
+        "react-bootstrap": "^1.0.0-beta.12",
         "react-dom": "^16.8.6",
+        "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
-        "react-scripts": "^3.0.1"
+        "react-scripts": "^3.0.1",
+        "redux": "^4.0.4",
+        "redux-persist": "^5.10.0"
     },
     "scripts": {
-        "start": "npm run ms:list dev && react-scripts start",
+        "start": "react-scripts start",
         "build": "jest && react-scripts build",
         "eject": "react-scripts eject",
         "test": "jest",
